plugins {
    id 'com.android.library'
    id 'org.lsposed.lsparanoid'
}

android {

    compileSdkVersion = 35
    buildToolsVersion = '34'
    aidlPackagedList "android/app/IServiceConnection.aidl"
    aidlPackagedList "android/accounts/IAccountManagerResponse.aidl"

    defaultConfig {
        minSdkVersion 21
        targetSdkVersion 28
        versionCode 1
        versionName "1.0"
        consumerProguardFiles 'consumer-rules.pro'
        ndk {
            abiFilters "arm64-v8a"
        }
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            
            packagingOptions {
                jniLibs {
                    keepDebugSymbols = []
                    useLegacyPackaging = true
                }
            }
        }
        
        debug {
            minifyEnabled false
        }
    }
    
    externalNativeBuild {
        cmake {
            path file('./src/main/cpp/CMakeLists.txt')
        }
    }
    
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    
    aaptOptions {
        cruncherEnabled = false
        useNewCruncher = false
    }
    
    buildFeatures {
        aidl true
    }
    
    testOptions {
        unitTests.returnDefaultValues = true
    }
    
    lintOptions {
        checkReleaseBuilds false
        abortOnError false
        warningsAsErrors false
        disable "UnusedResources", 'RestrictedApi'
        textOutput "stdout"
        textReport false
        check 'NewApi', 'InlinedApi'
    }
    
    namespace "com.Score"
    ndkVersion '29.0.14033849'
}

tasks.withType(Javadoc) {
    options.addStringOption('Xdoclint:none', '-quiet')
    options.addStringOption('encoding', 'UTF-8')
    options.addStringOption('charSet', 'UTF-8')
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.github.tiann:FreeReflection:3.2.2'
    implementation 'com.github.CodingGay.BlackReflection:core:1.1.4'
    annotationProcessor 'com.github.CodingGay.BlackReflection:compiler:1.1.4'
    implementation 'net.lingala.zip4j:zip4j:2.11.5'
}
